--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>cloud-eureka-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>registrocontable-cloud-eureka-server</name>
-	<description>Servidor de configuración distribuida</description>
+	<description>Servidor de registro de servicios</description>
 
 	<properties>
 		<java.version>14</java.version>
