--- a/.github/workflows/validate_test.yml
+++ b/.github/workflows/validate_test.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Maven Package
         run: mvn -B clean package -DskipTests
       - name: Maven Verify
-        run: mvn -B clean verify -Pintegration-test
+        run: mvn -B clean verify
