--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -86,10 +88,13 @@
 	</scm>
 
 	<distributionManagement>
+		<snapshotRepository>
+			<id>nexus</id>
+			<url>http://192.168.1.5:8081/repository/registro-contable-snapshot/</url>
+		</snapshotRepository>
 		<repository>
-			<id>github</id>
-			<name>GitHub</name>
-			<url>https://maven.pkg.github.com/${git.repository}</url>
+			<id>nexus</id>
+			<url>http://192.168.1.5:8081/repository/registro-contable-releases/</url>
 		</repository>
 	</distributionManagement>
 
