Añadido network en docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,17 @@
 version: "3"
 
+networks:
+  registrocontable-net:
+    driver: bridge
+
 services:
   cloud-config-server:
     image: "registro-contable/cloud-eureka-server:${TAG}"
     ports:
       - "8761:8761"
     container_name: cloud-eureka-server
+    networks:
+      - registrocontable-net
     environment:
       - spring.cloud.config.profile=development
       - spring.cloud.config.uri=http://192.168.1.5:8888
