--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,5 +1,1 @@
-spring:
-  application:
-    name: servicio-eureka-server
-      cloud:    config:
-      profile: local      uri:      - http://localhost:8888
+spring:  application:    name: servicio-eureka-server  cloud:    config:      profile: local      uri:        - http://localhost:8888
