--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -7,3 +7,7 @@ eureka:
       defaultZone: http://localhost:8761/eureka
     register-with-eureka: true
     fetch-registry: true
+spring:
+  cloud:
+    config:
+      enabled: false
